[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-mmr"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
ark-ff       = { default-features = false, features = ["std"], version = "0.4" }
lb-groth16   = { workspace = true }
lb-poseidon2 = { workspace = true }
rpds         = { default-features = false, features = ["serde"], version = "1.1.1" }
serde        = { features = ["derive"], workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
proptest       = { default-features = false, features = ["std"], version = "1.0" }
proptest-macro = "0.2"

[lints]
workspace = true

[package.metadata.cargo-machete]
# False positives.
ignored = ["proptest"]
