[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-mmr"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
ark-ff       = { features = ["std"], workspace = true }
lb-groth16   = { workspace = true }
lb-poseidon2 = { workspace = true }
rpds         = { features = ["serde"], workspace = true }
serde        = { features = ["derive"], workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
proptest       = { features = ["std"], workspace = true }
proptest-macro = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
# False positives.
ignored = ["proptest"]
