[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-tests"
publish     = false
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait                      = "0.1"
cucumber                         = { features = ["output-junit"], version = "=0.22.0" }
derivative                       = "2.2.0"
futures                          = { default-features = false, version = "0.3" }
futures-util                     = { default-features = false, version = "0.3.31" }
hex                              = { default-features = false, version = "0.4.3" }
lb-blend-proofs                  = { workspace = true }
lb-chain-broadcast-service       = { workspace = true }
lb-chain-service                 = { workspace = true }
lb-common-http-client            = { workspace = true }
lb-core                          = { workspace = true }
lb-cryptarchia-engine            = { features = ["serde"], workspace = true }
lb-groth16                       = { workspace = true }
lb-http-api-common               = { workspace = true }
lb-key-management-system-service = { workspace = true }
lb-libp2p                        = { workspace = true }
lb-network-service               = { features = ["libp2p"], workspace = true }
lb-node                          = { default-features = false, features = ["testing"], workspace = true }
lb-pol                           = { features = ["high-active-slot-coefficient"], workspace = true }
lb-tx-service                    = { features = ["libp2p", "mock"], workspace = true }
lb-utils                         = { workspace = true }
logos-blockchain-zone-sdk        = { path = "../zone-sdk" }
num-bigint                       = { default-features = false, version = "0.4" }
rand                             = { workspace = true }
reqwest                          = { features = ["json"], workspace = true }
serde_json                       = "1.0"
serde_yaml                       = "0.9"
serial_test                      = "3.1.1"
strum                            = "0.27.2"
tempfile                         = { workspace = true }
testing-framework-core           = { git = "https://github.com/logos-blockchain/logos-blockchain-testing.git", tag = "intermediate_ref_02" }
testing-framework-runner-compose = { git = "https://github.com/logos-blockchain/logos-blockchain-testing.git", tag = "intermediate_ref_02" }
testing-framework-runner-local   = { git = "https://github.com/logos-blockchain/logos-blockchain-testing.git", tag = "intermediate_ref_02" }
testing-framework-workflows      = { git = "https://github.com/logos-blockchain/logos-blockchain-testing.git", tag = "intermediate_ref_02" }
thiserror                        = { default-features = false, version = "2.0" }
time                             = { default-features = false, version = "0.3" }
tokio                            = "1"
tracing                          = { workspace = true }
tracing-subscriber               = { features = ["env-filter", "fmt"], version = "0.3" }

[features]
cucumber             = []
cucumber_stand_alone = []
testing_framework    = []

[[test]]
name = "test_cryptarchia_happy_path"
path = "src/tests/cryptarchia/happy.rs"

[[test]]
name = "test_cryptarchia_bootstrap"
path = "src/tests/cryptarchia/bootstrap.rs"

[[test]]
name = "test_orphan_handling"
path = "src/tests/cryptarchia/orphan.rs"

[[test]]
name = "test_immutable_blocks"
path = "src/tests/cryptarchia/immutable_blocks.rs"

[[test]]
name = "test_invalid_tx_handling"
path = "src/tests/cryptarchia/invalid_tx_handling.rs"

[[test]]
name = "test_mempool_api"
path = "src/tests/mempool/api.rs"

[[test]]
name = "test_mantle_sdp_ops"
path = "src/tests/mantle/sdp_ops.rs"

[[test]]
name              = "test_testing_framework_smoke_local"
path              = "src/tests/testing_framework/smoke_local.rs"
required-features = ["testing_framework"]

[[test]]
name              = "test_testing_framework_cucumber_smoke_local"
path              = "cucumber_tests/stand_alone_tests/cucumber_smoke_local.rs"
required-features = ["cucumber_stand_alone"]

[[test]]
harness           = false                        # Cucumber will have its own main() function to run tests.
name              = "cucumber"
path              = "cucumber_tests/cucumber.rs"
required-features = ["cucumber"]

[[test]]
name = "test_zone_e2e"
path = "src/tests/zone_sdk/e2e.rs"
