[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-tests"
publish     = false
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
divan       = { workspace = true }
lb-core     = { workspace = true }
lb-groth16  = { workspace = true }
lb-mmr      = { workspace = true }
lb-utxotree = { workspace = true }

[dependencies]
async-trait                      = "0.1"
cucumber                         = { features = ["output-junit"], version = "=0.22.0" }
derivative                       = "2.2.0"
ed25519                          = "2.2.3"
futures                          = { workspace = true }
futures-util                     = { workspace = true }
hex                              = { default-features = false, version = "0.4.3" }
lb-chain-broadcast-service       = { workspace = true }
lb-chain-service                 = { workspace = true }
lb-common-http-client            = { workspace = true }
lb-core                          = { workspace = true }
lb-cryptarchia-engine            = { workspace = true }
lb-groth16                       = { workspace = true }
lb-http-api-common               = { workspace = true }
lb-key-management-system-service = { workspace = true }
lb-libp2p                        = { workspace = true }
lb-mmr                           = { workspace = true }
lb-network-service               = { workspace = true }
lb-node                          = { default-features = false, features = ["testing"], workspace = true }
lb-testing-framework             = { workspace = true }
lb-tx-service                    = { workspace = true }
lb-utils                         = { workspace = true }
lb-wallet                        = { workspace = true }
lb-zksign                        = { workspace = true }
lb-zone-sdk                      = { workspace = true }
lb_config                        = { workspace = true }
libp2p                           = "0.55.0"
num-bigint                       = { default-features = false, version = "0.4" }
rand                             = { workspace = true }
reqwest                          = { features = ["json"], workspace = true }
rpds                             = { default-features = false, version = "1.1.1" }
serde                            = { features = ["derive"], version = "1.0.228" }
serde_json                       = "1.0"
serde_yaml                       = "0.9"
serial_test                      = "3.1.1"
strum                            = "0.27.2"
strum_macros                     = "0.27.2"
tempfile                         = { workspace = true }
testing-framework-core           = { workspace = true }
testing-framework-runner-local   = { workspace = true }
thiserror                        = { default-features = false, version = "2.0" }
time                             = { default-features = false, version = "0.3" }
tokio                            = { workspace = true }
tracing                          = { workspace = true }
tracing-subscriber               = { features = ["env-filter", "fmt"], version = "0.3" }

[features]
cucumber             = []
cucumber_stand_alone = []
mantle_sdp           = []
testing_framework    = []

[[test]]
name = "blend_devnet_setup"
path = "src/tests/blend/devnet.rs"

[[test]]
name = "test_cli_restart"
path = "src/tests/cli/restart.rs"

[[test]]
name = "test_mantle_channel"
path = "src/tests/mantle/channel.rs"

[[test]]
name              = "test_mantle_sdp_ops"
path              = "src/tests/mantle/sdp/ops.rs"
required-features = ["mantle_sdp"]

[[test]]
name              = "test_mantle_sdp_blend"
path              = "src/tests/mantle/sdp/activity.rs"
required-features = ["mantle_sdp"]

[[test]]
name = "test_mantle_leader"
path = "src/tests/mantle/leader.rs"

[[test]]
name              = "test_testing_framework_smoke_local"
path              = "src/tests/testing_framework/smoke_local.rs"
required-features = ["testing_framework"]

[[test]]
name              = "test_testing_framework_external_urls_inscription"
path              = "src/tests/testing_framework/external_urls_inscription.rs"
required-features = ["testing_framework"]

[[test]]
name              = "test_testing_framework_fork_detector"
path              = "src/tests/testing_framework/fork_detector.rs"
required-features = ["testing_framework"]

[[test]]
name              = "test_testing_framework_k8s_smoke"
path              = "src/tests/testing_framework/k8s_smoke.rs"
required-features = ["testing_framework"]

[[test]]
name              = "test_testing_framework_cucumber_smoke_local"
path              = "cucumber_tests/stand_alone_tests/cucumber_smoke_local.rs"
required-features = ["cucumber_stand_alone"]

[[test]]
name              = "test_testing_framework_cucumber_smoke_k8s"
path              = "cucumber_tests/stand_alone_tests/cucumber_smoke_k8s.rs"
required-features = ["cucumber_stand_alone"]

[[test]]
harness           = false                        # Cucumber will have its own main() function to run tests.
name              = "cucumber"
path              = "cucumber_tests/cucumber.rs"
required-features = ["cucumber"]

[[test]]
name = "test_zone_sdk_e2e"
path = "src/tests/zone_sdk/e2e.rs"

[[bench]]
harness = false
name    = "voucher"
