[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-tests"
publish     = false
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
divan       = { workspace = true }
lb-core     = { workspace = true }
lb-groth16  = { workspace = true }
lb-mmr      = { workspace = true }
lb-utxotree = { workspace = true }

[dependencies]
async-trait                      = { workspace = true }
cucumber                         = { features = ["macros", "output-junit"], workspace = true }
derivative                       = { workspace = true }
ed25519                          = { workspace = true }
futures                          = { workspace = true }
futures-util                     = { workspace = true }
hex                              = { workspace = true }
lb-api-service                   = { workspace = true }
lb-chain-broadcast-service       = { workspace = true }
lb-chain-service                 = { workspace = true }
lb-common-http-client            = { workspace = true }
lb-config                        = { workspace = true }
lb-core                          = { workspace = true }
lb-groth16                       = { workspace = true }
lb-http-api-common               = { workspace = true }
lb-key-management-system-service = { workspace = true }
lb-libp2p                        = { workspace = true }
lb-mmr                           = { workspace = true }
lb-network-service               = { workspace = true }
lb-node                          = { features = ["testing"], workspace = true }
lb-testing-framework             = { workspace = true }
lb-tx-service                    = { workspace = true }
lb-utils                         = { workspace = true }
lb-wallet                        = { workspace = true }
lb-zksign                        = { workspace = true }
lb-zone-sdk                      = { workspace = true }
libp2p                           = { workspace = true }
num-bigint                       = { workspace = true }
rand                             = { workspace = true }
reqwest                          = { features = ["json"], workspace = true }
rpds                             = { workspace = true }
serde                            = { features = ["derive"], workspace = true }
serde_json                       = { workspace = true }
serde_yaml                       = { workspace = true }
serial_test                      = { workspace = true }
strum                            = { features = ["derive", "std"], workspace = true }
strum_macros                     = { workspace = true }
tempfile                         = { workspace = true }
testing-framework-core           = { workspace = true }
testing-framework-runner-local   = { workspace = true }
thiserror                        = { workspace = true }
time                             = { workspace = true }
tokio                            = { workspace = true }
tracing                          = { workspace = true }
tracing-subscriber               = { features = ["env-filter", "fmt"], workspace = true }

[features]
cucumber             = []
cucumber_stand_alone = []
mantle_sdp           = []
testing_framework    = []

[[test]]
name = "blend_devnet_setup"
path = "src/tests/blend/devnet.rs"

[[test]]
name = "test_cli_restart"
path = "src/tests/cli/restart.rs"

[[test]]
name = "test_cryptarchia_blocks_streaming"
path = "src/tests/cryptarchia/blocks_streaming.rs"

[[test]]
name = "test_mantle_chain_start"
path = "src/tests/mantle/chain_start.rs"

[[test]]
name = "test_mantle_channel"
path = "src/tests/mantle/channel.rs"

[[test]]
name              = "test_mantle_sdp_ops"
path              = "src/tests/mantle/sdp/ops.rs"
required-features = ["mantle_sdp"]

[[test]]
name              = "test_mantle_sdp_blend"
path              = "src/tests/mantle/sdp/activity.rs"
required-features = ["mantle_sdp"]

[[test]]
name = "test_mantle_leader"
path = "src/tests/mantle/leader.rs"

[[test]]
name              = "test_testing_framework_smoke_local"
path              = "src/tests/testing_framework/smoke_local.rs"
required-features = ["testing_framework"]

[[test]]
name              = "test_testing_framework_external_urls_inscription"
path              = "src/tests/testing_framework/external_urls_inscription.rs"
required-features = ["testing_framework"]

[[test]]
name              = "test_testing_framework_fork_detector"
path              = "src/tests/testing_framework/fork_detector.rs"
required-features = ["testing_framework"]

[[test]]
name              = "test_testing_framework_k8s_smoke"
path              = "src/tests/testing_framework/k8s_smoke.rs"
required-features = ["testing_framework"]

[[test]]
name              = "test_testing_framework_cucumber_smoke_local"
path              = "cucumber_tests/stand_alone_tests/cucumber_smoke_local.rs"
required-features = ["cucumber_stand_alone"]

[[test]]
name              = "test_testing_framework_cucumber_smoke_k8s"
path              = "cucumber_tests/stand_alone_tests/cucumber_smoke_k8s.rs"
required-features = ["cucumber_stand_alone"]

[[test]]
harness           = false                        # Cucumber will have its own main() function to run tests.
name              = "cucumber"
path              = "cucumber_tests/cucumber.rs"
required-features = ["cucumber"]

[[test]]
name = "test_zone_sdk_e2e"
path = "src/tests/zone_sdk/e2e.rs"

[[bench]]
harness = false
name    = "voucher"
