[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-tracing"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[package.metadata.cargo-machete]
# False positives.
ignored = [
  # Required by `opentelemetry_otlp::new_exporter().with_http_client()`.
  "opentelemetry-http",
]

[lints]
workspace = true

[dependencies]
lb-log-targets = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-http = { features = ["reqwest"], workspace = true }
opentelemetry-otlp = { features = [
  "grpc-tonic",
  "http",
  "http-proto",
  "logs",
  "metrics",
  "reqwest-client",
], workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { features = ["logs", "rt-tokio"], workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-gelf = { workspace = true }
tracing-loki = { features = ["compat-0-2-1"], workspace = true }
tracing-opentelemetry = { features = ["metrics"], workspace = true }
tracing-subscriber = { features = ["env-filter", "std"], workspace = true }
url = { features = ["serde"], workspace = true }
