[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-utils"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
blake2      = { default-features = false, optional = true, version = "0.10" }
cipher      = { version = "0.4" }
const-hex   = { default-features = false, features = ["alloc"], version = "1" }
futures     = { optional = true, workspace = true }
humantime   = { optional = true, version = "2.1" }
overwatch   = { workspace = true }
rand        = { features = ["getrandom"], workspace = true }
serde       = { features = ["alloc", "derive"], workspace = true }
serde_with  = { optional = true, workspace = true }
time        = { features = ["serde-human-readable"], optional = true, workspace = true }
tokio       = { optional = true, workspace = true }

[features]
rng   = ["dep:blake2"]
serde = ["const-hex/alloc", "serde/alloc"]
time  = ["dep:humantime", "dep:serde_with", "dep:time"]
tokio = ["dep:futures", "dep:tokio"]

[dev-dependencies]
nistrs      = "0.1.2"
rand_chacha = { default-features = false, version = "0.3" }
serde_json  = { default-features = false, features = ["alloc"], version = "1.0" }
serde_with  = { features = ["macros"], workspace = true }
