[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-utils"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
blake2      = { optional = true, workspace = true }
cipher      = { workspace = true }
const-hex   = { workspace = true }
futures     = { optional = true, workspace = true }
humantime   = { optional = true, workspace = true }
overwatch   = { workspace = true }
rand        = { features = ["getrandom"], workspace = true }
serde       = { features = ["alloc", "derive"], workspace = true }
serde_with  = { optional = true, workspace = true }
time        = { features = ["serde-human-readable"], optional = true, workspace = true }
tokio       = { optional = true, workspace = true }

[features]
rng   = ["dep:blake2"]
serde = ["const-hex/alloc", "serde/alloc"]
time  = ["dep:humantime", "dep:serde_with", "dep:time"]
tokio = ["dep:futures", "dep:tokio"]

[dev-dependencies]
nistrs      = { workspace = true }
rand_chacha = { workspace = true }
serde_json  = { features = ["alloc"], workspace = true }
serde_with  = { features = ["macros"], workspace = true }
