[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-utxotree"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
ark-ff       = { default-features = false, version = "0.4" }
lb-groth16   = { workspace = true }
lb-poseidon2 = { workspace = true }
num-bigint   = { default-features = false, version = "0.4" }
rpds         = { default-features = false, features = ["serde"], version = "1" }
serde        = { features = ["alloc", "derive", "rc"], workspace = true }
thiserror    = "1.0"

[dev-dependencies]
quickcheck        = { default-features = false, version = "1.0" }
quickcheck_macros = "1.0"
rand              = "0.9"

[lints]
workspace = true
