[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-utxotree"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
ark-ff       = { workspace = true }
lb-groth16   = { workspace = true }
lb-poseidon2 = { workspace = true }
num-bigint   = { workspace = true }
rpds         = { features = ["serde"], workspace = true }
serde        = { features = ["alloc", "derive", "rc"], workspace = true }
thiserror    = { workspace = true }

[dev-dependencies]
quickcheck        = { workspace = true }
quickcheck_macros = { workspace = true }
rand              = { workspace = true }

[lints]
workspace = true
