[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-wallet-http-client"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
hex                           = { workspace = true }
lb-common-http-client         = { workspace = true }
lb-core                       = { workspace = true }
lb-http-api-common            = { workspace = true }
lb-key-management-system-keys = { workspace = true }
url                           = { workspace = true }
