[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-wallet"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
lb-core                       = { workspace = true }
lb-key-management-system-keys = { workspace = true }
lb-ledger                     = { workspace = true }
num-bigint                    = { default-features = false, version = "0.4" }
rpds                          = { default-features = false, version = "1.1.1" }
thiserror                     = { workspace = true }
tracing                       = { workspace = true }

[dev-dependencies]
lb-cryptarchia-engine = { workspace = true }
lb-utils              = { workspace = true }

[features]
default = []
