[package]
categories  = { workspace = true }
description = "Logos blockchain Zone SDK - client library for building zone sequencers and indexers"
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-zone-sdk"
publish     = false
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait                      = { workspace = true }
futures                          = { default-features = false, version = "0.3" }
lb-common-http-client            = { workspace = true }
lb-core                          = { workspace = true }
lb-groth16                       = { workspace = true }
lb-key-management-system-service = { workspace = true }
rand                             = "0.8.5"
reqwest                          = { workspace = true }
rpds                             = { default-features = false, version = "1.1.1" }
serde                            = { features = ["derive"], workspace = true }
thiserror                        = { workspace = true }
tokio                            = { features = ["macros", "rt", "sync", "time"], workspace = true }
tracing                          = { workspace = true }

[dev-dependencies]
num-bigint = { default-features = false, version = "0.4" }
