[package]
categories  = { workspace = true }
description = "Logos blockchain Zone SDK - client library for building zone sequencers and indexers"
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-zone-sdk"
publish     = false
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
async-trait                      = { workspace = true }
futures                          = { workspace = true }
hex                              = { workspace = true }
lb-common-http-client            = { workspace = true }
lb-core                          = { workspace = true }
lb-groth16                       = { workspace = true }
lb-key-management-system-service = { workspace = true }
rand                             = { workspace = true }
reqwest                          = { workspace = true }
rpds                             = { workspace = true }
serde                            = { features = ["derive"], workspace = true }
thiserror                        = { workspace = true }
tokio                            = { features = ["macros", "rt", "sync", "time"], workspace = true }
tracing                          = { workspace = true }

[dev-dependencies]
num-bigint = { workspace = true }
