[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-blend-message"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
blake2                        = { workspace = true }
derivative                    = { default-features = false, version = "2" }
hex                           = { workspace = true }
itertools                     = { default-features = false, version = "0.14" }
lb-blend-crypto               = { workspace = true }
lb-blend-proofs               = { workspace = true }
lb-core                       = { workspace = true }
lb-groth16                    = { workspace = true }
lb-key-management-system-keys = { workspace = true }

lb-utils        = { features = ["rng"], workspace = true }
serde           = { workspace = true }
serde-big-array = { workspace = true }
serde_with      = { default-features = false, features = ["alloc"], version = "3" }
thiserror       = { default-features = false, version = "1.0.69" }
tracing         = { workspace = true }
zeroize         = { workspace = true }

[dev-dependencies]
test-log = { default-features = false, features = ["trace"], version = "0.2" }

[features]
unsafe-test-functions = []
