[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-blend-network"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
either                        = { default-features = false, version = "1.15.0" }
futures                       = { default-features = false, version = "0.3.30" }
futures-timer                 = { version = "3.0.3" }
lb-blend-message              = { workspace = true }
lb-blend-proofs               = { workspace = true }
lb-blend-scheduling           = { workspace = true }
lb-core                       = { workspace = true }
lb-key-management-system-keys = { workspace = true }
lb-libp2p                     = { workspace = true }
libp2p                        = { workspace = true }
tracing                       = { workspace = true }

[dev-dependencies]
async-trait         = { version = "0.1" }
lb-blend-message    = { features = ["unsafe-test-functions"], workspace = true }
lb-blend-scheduling = { features = ["unsafe-test-functions"], workspace = true }
lb-groth16          = { default-features = false, workspace = true }
libp2p              = { default-features = false, features = ["plaintext", "tcp", "yamux"], workspace = true }
libp2p-stream       = { workspace = true }
libp2p-swarm-test   = { default-features = false, features = ["tokio"], version = "0.5.0" }
test-log            = { default-features = false, version = "0.2.18" }
tokio               = { default-features = false, version = "1" }
tokio-stream        = { default-features = false, version = "0.1" }

[features]
unsafe-test-functions = []
