[package]
categories  = { workspace = true }
description = { workspace = true }
edition     = { workspace = true }
keywords    = { workspace = true }
license     = { workspace = true }
name        = "logos-blockchain-blend-network"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lints]
workspace = true

[dependencies]
either                        = { default-features = false, version = "1.15.0" }
futures                       = { workspace = true }
futures-timer                 = { version = "3.0.3" }
hex                           = { workspace = true }
lb-blend-message              = { workspace = true }
lb-blend-proofs               = { workspace = true }
lb-blend-scheduling           = { workspace = true }
lb-core                       = { workspace = true }
lb-key-management-system-keys = { workspace = true }
lb-libp2p                     = { workspace = true }
libp2p                        = { workspace = true }
tracing                       = { workspace = true }

[dev-dependencies]
async-trait         = { version = "0.1" }
lb-blend-message    = { features = ["unsafe-test-functions"], workspace = true }
lb-blend-scheduling = { features = ["unsafe-test-functions"], workspace = true }
libp2p              = { default-features = false, features = ["plaintext", "tcp", "yamux"], workspace = true }
libp2p-stream       = { workspace = true }
libp2p-swarm-test   = { default-features = false, features = ["tokio"], version = "0.5.0" }
test-log            = { default-features = false, features = ["trace"], version = "0.2.18" }
tokio               = { workspace = true }
tokio-stream        = { workspace = true }

[features]
unsafe-test-functions = []
